<resources>
    <string name="app_name">TimeTable</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="time">time</string>
    <string name="day">day</string>
    <string name="timeString"></string>
    <string name="dayString"></string>
    <string name="curPeriod">Current Period</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="nextPeriod">Next Period</string>
    <string name="period1">period1</string>
    <string name="period2">period2</string>
    <string name="period3">period3</string>
    <string name="period4">period4</string>
    <string name="period5">period5</string>
    <string name="period6">period6</string>
    <string name="period7">period7</string>
    <string name="period8">period8</string>
    <string name="period9">period9</string>
    <string name="title_activity_about">About</string>
    <string name="t">time</string>
    <string name="about1">
        The TimeTable app brings the present class that is being taught besides displaying the full timetable.
        Hope this will be helpful to students.
    </string>
    <string name="aboutTitle">TimeTable 1.0</string>
    <string name="featuresTitle">Features :</string>
    <string name="feature1"> The current running period is highlighted.</string>
    <string name="feature2"> Automatically navigates to present day tab when opened.</string>
    <string name="feature3"> Automatically scrolls to present period when opened.</string>
    <string name="feature4"> Floating Action Button will navigate to present day tab.</string>
    <string name="feature5"> Once the timings are over, you will navigate to next day tab.</string>
    <string name="feature6"> Beautifully coloured tabs.</string>
    <string name="feature7"> Hold down a period to know the time difference / time left for that period.</string>
    <string name="bullet">&#8226;</string>
    <string name="gmail">lightrescuer@gmail.com</string>
    <string name="brand">AKHILEZ</string>
    <string name="title_activity_faculty">Faculty</string>
    <string name="faculty">Faculty</string>
    <string name="subject">Subject</string>
    <string name="title_activity_important_notes">Important Notes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_timetable">TimeTable</string>
    <string name="setting_appearance">Appearance</string>
    <string name="setting_notifications">Notifications</string>
    <string name="title_activity_change_time_table">TimeTable Settings</string>
    <string name="title_activity_edit_timetable">EditTimetable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_timings">Change timings</string>
    <string name="title_activity_edit_timings">EditTimings</string>
    <string name="title_activity_choose_time_table">ChooseTimeTable</string>

</resources>
